<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="enter_amount_to_convert">Enter amount to convert</string>
    <string name="convert">Convert</string>
    <string name="source_currency">Source Currency:</string>
    <string name="target_currency">Target Currency:</string>
    <string name="currency_converter">Currency Converter</string>

    <string-array name="source_currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>BAM</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>CLP</item>
        <item>CYN</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>ETB</item>
        <item>GBP</item>
        <item>HNL</item>
        <item>XOF</item>
        <item>YER</item>
        <item>ZWL</item>

    </string-array>

    <string-array name="target_currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>BAM</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>CLP</item>
        <item>CYN</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>ETB</item>
        <item>GBP</item>
        <item>HNL</item>
        <item>XOF</item>
        <item>YER</item>
        <item>ZWL</item>

    </string-array>
</resources>